host-network-ports/negative-test-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-host-networking-ports-disallowed
  labels:
    app: alpine-host-networking-ports
spec:
  hostNetwork: true
  containers:
  - name: alpine
    image: alpine:3.13.7
      command:
        - /bin/sh
        - "-c"
        - "sleep 60m"
    ports:
    - containerPort: 9001
      hostPort: 9001
