host-network-ports/positive-test-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-host-networking-ports-allowed
  labels:
    app: alpine-host-networking-ports
spec:
  hostNetwork: false
  containers:
  - name: alpine
    image: alpine:3.13.7
      command:
        - /bin/sh
        - "-c"
        - "sleep 60m"
    ports:
    - containerPort: 9000
      hostPort: 80
